<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/Fondo" >

    <TextView
        android:id="@+id/textViewSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sexo"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        tools:layout_editor_absoluteX="0dp" />

    <Spinner
        android:id="@+id/spinnerSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/Sex"
        android:prompt="@string/Prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fecha"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        tools:layout_editor_absoluteX="0dp" />

    <DatePicker
        android:id="@+id/datePickerFecha"
        android:layout_width="411dp"
        android:layout_height="301dp"
        android:layout_weight="1.91"
        android:headerBackground="#C558D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/textViewEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Estado"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:layout_editor_absoluteX="-10dp" />

    <Spinner
        android:id="@+id/spinnerEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/Prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="212dp"
        android:layout_y="339dp"
        android:text="@string/P3ButtonConsultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />


</androidx.constraintlayout.widget.ConstraintLayout>